--- a/documentation/themes/themes-creating.asciidoc
+++ b/documentation/themes/themes-creating.asciidoc
@@ -7,6 +7,8 @@ layout: page
 [[themes.creating]]
 = Creating and Using Themes
 
+*_This section has not yet been updated for Vaadin Framework 8._*
+
 Custom themes are placed in the [filename]#VAADIN/themes# folder of the web
 application, in an Eclipse project under the [filename]#WebContent# folder or
 [filename]#src/main/webapp# in Maven projects, as was illustrated in
