--- a/documentation/themes/themes-fonticon.asciidoc
+++ b/documentation/themes/themes-fonticon.asciidoc
@@ -7,6 +7,8 @@ layout: page
 [[themes.fonticon]]
 = Font Icons
 
+*_This section has not yet been updated for Vaadin Framework 8._*
+
 Font icons are icons included in a font. Fonts have many advantages over bitmap
 images. Browsers are usually faster in rendering fonts than loading image files.
 Web fonts are vector graphics, so they are scalable. As font icons are text
