Fix application documentation for 8
Updated where only small changes, mention not updated when more changes.

--- a/documentation/application/application-architecture.asciidoc
+++ b/documentation/application/application-architecture.asciidoc
@@ -7,6 +7,8 @@ layout: page
 [[application.architecture]]
 = Building the UI
 
+*_This section has not yet been updated to Vaadin Framework 8_*
+
 Vaadin user interfaces are built hierarchically from components, so that the
 leaf components are contained within layout components and other component
 containers. Building the hierarchy starts from the top (or bottom - whichever
