--- a/documentation/components/components-calendar.asciidoc
+++ b/documentation/components/components-calendar.asciidoc
@@ -7,6 +7,8 @@ layout: page
 [[components.calendar]]
 = [classname]#Calendar#
 
+*_This section has not yet been updated for Vaadin Framework 8._*
+
 ifdef::web[]
 [.sampler]
 image:{live-demo-image}[alt="Live Demo", link="http://demo.vaadin.com/sampler/#ui/data-input/dates/dates-calendar"]
